[[release-notes-5.11.1]]
== 5.11.1

*Date of Release:* ❓

*Scope:* minor bug fixes and improvements since 5.11.0

For a complete list of all _closed_ issues and pull requests for this release, consult the
link:{junit5-repo}+/milestone/79?closed=1+[5.11.1] milestone page in the JUnit repository
on GitHub.


[[release-notes-5.11.1-junit-platform]]
=== JUnit Platform

[[release-notes-5.11.1-junit-platform-bug-fixes]]
==== Bug Fixes

* Fixed potential locking issue with `ExclusiveResource` in the
  `HierarchicalTestExecutorService`, which could lead to deadlocks in certain scenarios.

[[release-notes-5.11.1-junit-platform-deprecations-and-breaking-changes]]
==== Deprecations and Breaking Changes

* ❓

[[release-notes-5.11.1-junit-platform-new-features-and-improvements]]
==== New Features and Improvements

* Introduce `ReflectionSupport.makeAccessible(Field)` for third-party use rather than
  calling the internal `ReflectionUtils.makeAccessible(Field)` method directly.


[[release-notes-5.11.1-junit-jupiter]]
=== JUnit Jupiter

[[release-notes-5.11.1-junit-jupiter-bug-fixes]]
==== Bug Fixes

* ❓

[[release-notes-5.11.1-junit-jupiter-deprecations-and-breaking-changes]]
==== Deprecations and Breaking Changes

* ❓

[[release-notes-5.11.1-junit-jupiter-new-features-and-improvements]]
==== New Features and Improvements

* ❓


[[release-notes-5.11.1-junit-vintage]]
=== JUnit Vintage

[[release-notes-5.11.1-junit-vintage-bug-fixes]]
==== Bug Fixes

* ❓

[[release-notes-5.11.1-junit-vintage-deprecations-and-breaking-changes]]
==== Deprecations and Breaking Changes

* ❓

[[release-notes-5.11.1-junit-vintage-new-features-and-improvements]]
==== New Features and Improvements

* ❓