@@ -18,6 +18,10 @@ on GitHub.
 
 * Fixed potential locking issue with `ExclusiveResource` in the
   `HierarchicalTestExecutorService`, which could lead to deadlocks in certain scenarios.
+* `NamespacedHierarchicalStore` no longer throws an exception after it has been closed if
+  the store is queried via one of the `get(...)` or `getOrComputeIfAbsent(...)` methods;
+  however, if a `getOrComputeIfAbsent(...)` invocation results in the computation of a new
+  value, an exception will still be thrown.
 
 [[release-notes-5.11.1-junit-platform-deprecations-and-breaking-changes]]
 ==== Deprecations and Breaking Changes
@@ -37,7 +41,8 @@ on GitHub.
 [[release-notes-5.11.1-junit-jupiter-bug-fixes]]
 ==== Bug Fixes
 
-* ❓
+* `TestWatcher` callback methods can once again access data in the
+  `ExtensionContext.Store`.
 
 [[release-notes-5.11.1-junit-jupiter-deprecations-and-breaking-changes]]
 ==== Deprecations and Breaking Changes
